论文名称小写

--- a/post/self-supervised-learning/初识自监督学习.md
+++ b/post/self-supervised-learning/初识自监督学习.md
@@ -12,7 +12,7 @@
 【3】Unsupervised Visual Representation Learning by Context Prediction  
 【4】Unsupervised Learning of Visual Representations by Solving Jigsaw Puzzles  
 【5】Representation Learning by Learning to Count  
-【6】UNSUPERVISED REPRESENTATION LEARNING BY PREDICTING IMAGE ROTATIONS  
+【6】unsupervised representation learning by predicting image rotations 
 
 自监督学习：不使用额外的人工标注，而是使用数据自带的信息作为监督信号，自监督学习可以在数据稀缺的时候，作为目标任务的代理任务，达到预训练的效果。也可以直接用作目标任务，如使用双目信息做单目深度估计。与MAML的区别，都能产生好的初始化参数，但MAML是使用meta-learning思想进行训练的。  
 
